sfdx-source/main/default/objects/VCC_Addendum__c/VCC_Addendum__c.object-meta.xml
<CustomObject>
    <description>Contains the information regarding updates to a Progress Note</description>
    <label>Addendum</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Addendum Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addendums</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>