sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Addendum__c.field-meta.xml
<CustomField>
    <fullName>VCC_Addendum__c</fullName>
    <description>Addendum Description/Text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Addendum Description/Text</inlineHelpText>
    <label>Addendum</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>