sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Clinic_Location__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic_Location__c</fullName>
    <description>Location associated with the addendum record</description>
    <formula>VCC_Related_Note__r.VCC_Clinic_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic/Location</label>
    <type>Text</type>
</CustomField>