sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_DasLastErrorCode__c.field-meta.xml
<CustomField>
    <fullName>VCC_DasLastErrorCode__c</fullName>
    <description>This field holds the error code from the most recent failed DAS consolidated endpoint failure, if any. 
1000 - Invalid or expired oauth token
1100 - Log in Error
1200 - Valid Signature Error
1300 - Valid Signature Error
1400 - Write Note Error
1500 - Additional Signatures Error
1600 - Sign Note Error
1700 - Create Addendum Error
1800 - Sign Addendum Error
2000 - Save Encounter Error
2100 - Select Patient Error
2200 - Match Patient Error
2300 - Get Locations Error</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DAS Last Error Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>