sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Is_My_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_My_VISN__c</fullName>
    <description>Returns true if the VISN for the addendum matches the VISN for the user</description>
    <formula>IF( VCC_Owner_Division__c = $User.Division ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My VISN</label>
    <type>Checkbox</type>
</CustomField>