sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_localSiteid__c.field-meta.xml
<CustomField>
    <fullName>VCC_localSiteid__c</fullName>
    <description>The site Id number associated with the addendum record</description>
    <formula>VCC_Related_Note__r.VCC_localSiteId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>localSiteid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>