sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_DOB__c</fullName>
    <description>Patient&apos;s DOB from Progress Note</description>
    <formula>VCC_Related_Note__r.VCC_Patient_DOB__c</formula>
    <inlineHelpText>Patient&apos;s DOB from Progress Note</inlineHelpText>
    <label>Patient DOB</label>
    <type>Text</type>
</CustomField>