sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Patient_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_Primary_Address__c</fullName>
    <description>Patient&apos;s Primary Address from Progress Note</description>
    <formula>VCC_Related_Note__r.VCC_Patient_Primary_Address__c</formula>
    <inlineHelpText>Patient&apos;s Primary Address from Progress Note</inlineHelpText>
    <label>Patient Primary Address</label>
    <type>Text</type>
</CustomField>