sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Related_Case__c.field-meta.xml
<CustomField>
    <fullName>VCC_Related_Case__c</fullName>
    <description>The Case related to this Addendum</description>
    <formula>VCC_Related_Note__r.VCC_Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Case related to this Addendum</inlineHelpText>
    <label>Case</label>
    <type>Text</type>
</CustomField>