sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Related_Note__c.field-meta.xml
<CustomField>
    <fullName>VCC_Related_Note__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Progress Note that this Addendum is related to.</description>
    <inlineHelpText>The Progress Note that this Addendum is related to.</inlineHelpText>
    <label>Progress Note</label>
    <referenceTo>VCC_Progress_Note__c</referenceTo>
    <relationshipLabel>Addendums</relationshipLabel>
    <relationshipName>Addendums</relationshipName>
    <type>Lookup</type>
</CustomField>