sfdx-source/main/default/objects/VCC_Addendum__c/fields/VCC_Transferred_Addendum__c.field-meta.xml
<CustomField>
    <fullName>VCC_Transferred_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Transfer of work (open cases) in CRM after an employee leaves the VA System</description>
    <label>Transferred Addendum</label>
    <type>Checkbox</type>
</CustomField>