sfdx-source/main/default/objects/VCC_Addendum__c/validationRules/VCC_Addendum_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Addendum_Cannot_Be_Blank</fullName>
    <active>true</active>
    <description>The Addendum description cannot be blank. The rule will not run on an Addendum that has been transferred.</description>
    <errorConditionFormula
    >!$Permission.DisableTriggersFlag &amp;&amp; !VCC_Transferred_Addendum__c &amp;&amp; /* Addendums that have been transferred by the flow will be excluded from this rule */
        ISBLANK(VCC_Addendum__c)</errorConditionFormula>
    <errorMessage>The Addendum description cannot be blank</errorMessage>
</ValidationRule>