sfdx-source/main/default/objects/VCC_Addendum__c/validationRules/VCC_Lock_Signed_Addendum.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Lock_Signed_Addendum</fullName>
    <active>true</active>
    <description>Lock a signed Addendum. The rule will not run on an Addendum that has been transferred.</description>
    <errorConditionFormula
    >!$Permission.DisableTriggersFlag &amp;&amp; !VCC_Transferred_Addendum__c &amp;&amp; /* Addendums that have been transferred by the flow will be excluded from this rule */
        AND( !ISNEW(), !ISCHANGED( VCC_Signed__c ) &amp;&amp; !PRIORVALUE( VCC_Signed__c ) == false ) &amp;&amp; NOT $Permission.VCC_Disable_Progress_Note_Assignment_Rules
        &amp;&amp; NOT(ISCHANGED( VCC_CRM_System_Modified_Output_To_VistA__c ))</errorConditionFormula>
    <errorMessage>The Addendum is signed and cannot be edited</errorMessage>
</ValidationRule>