sfdx-source/main/default/objects/VCC_Addendum__c/listViews/VCC_My_Unsigned_Addendums.listView-meta.xml
<ListView>
    <fullName>VCC_My_Unsigned_Addendums</fullName>
    <columns>NAME</columns>
    <columns>VCC_Related_Note__c</columns>
    <columns>VCC_Patient_Name__c</columns>
    <columns>VCC_Related_Case__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>VCC_Signed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Unsigned Addendums</label>
</ListView>